# timeseries-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
examples/: demo.py  make_readme_charts.py
examples/data/: server_room_temp.csv
src/timeseries_mcp/: __init__.py  datasets.py  models.py  server.py  store.py
src/timeseries_mcp/analysis/: __init__.py  anomalies.py  baselines.py  changepoints.py  correlation.py  decompose.py  quality.py  stationarity.py  trend.py
tests/: conftest.py  test_anomalies.py  test_changepoints.py  test_decompose_stationarity.py  test_quality_baselines.py  test_server.py  test_store.py  test_trend_correlation.py
